--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <p>Wellcome to the chat app</p>
+    <script src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript">
+        let socket = io();
+        socket.on('disconnect', () => {
+            console.log("dosconneted from server")
+        })
+    </script>
 </body>
 </html>
