--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,6 @@
 <body>
     <p>Wellcome to the chat app</p>
     <script src="/socket.io/socket.io.js"></script>
-    <script type="text/javascript">
-        let socket = io();
-        socket.on('disconnect', () => {
-            console.log("dosconneted from server")
-        })
-    </script>
+    <script type="text/javascript" src="/js/index.js"></script>
 </body>
 </html>
